Implement next, using new rel_node interface:

    * pre/post image on distances and test

    * pre/post image on relations (e.g. transitive closure)
        and test programs

========= (release?)

    * ability to store other relation nodes inside a forest
        (ugly implementation internally is fine)

    * AND/OR nodes

    * saturation 1 using OR-partitioned relations
        + reachability
        + distance
        + TC ?

    * backward saturation 1 using OR-partitioned relations
        + reachability

========= (release?)

    * saturation 2
        + reachability
        + distance
        + TC ?

    * backward saturation 2
        + reachability

========= (release?)

    * constraint nodes - for 'constrained saturation'

    * implicit nodes
        + enabled if low <= i < high
             (0==high for high = infinity?)

        + add a constant delta (could be negative)


    * user-defined implicit nodes
        + provide a function, f(i) gives j and down pointer?
        + need level, and hash
        + should work fine for OTF saturation

    * user-defined multi-level implicit nodes
        + interface ?
            - set of levels k1, ..., kn, as inputs
            - single level k0, as output
            - provide a function, f(i_k1, i_k2, ..., i_kn) = j_k0
            - enlarge one of the kc levels

        + how to efficiently use this?
            - automatically build MxD underneath?

    * test all of these, and release

========= (release?)

    * updated mark and sweep with counters

    * try to eliminate reference counting altogether

    * simplify node headers and release

    * Protected nodes
        very light dd_edge for mark and sweep registry

        constructor:    register itself
        destructor:     unregister itself
        override = and such
        keep track of index for fast unregister

        forest: vector of pointers to protected nodes

========= (release?)

    * new byte-based node storage