@@ -31,6 +31,7 @@ MEDDLY::unary_operation::unary_operation(unary_list& owner,
     unsigned et_slots, forest* arg, forest* res)
     : operation(owner.getName(), et_slots)
 {
+    factory = nullptr;
     parent = &owner;
 
     argF = arg;
@@ -46,6 +47,7 @@ MEDDLY::unary_operation::unary_operation(unary_list& owner,
     unsigned et_slots, forest* arg, opnd_type res)
     : operation(owner.getName(), et_slots)
 {
+    factory = nullptr;
     parent = &owner;
     argF = arg;
     resultType = res;
@@ -60,6 +62,7 @@ MEDDLY::unary_operation::unary_operation(unary_list& owner,
 MEDDLY::unary_operation::unary_operation(forest* arg, forest* res)
     : operation()
 {
+    factory = nullptr;
     parent = nullptr;
 
     argF = arg;
@@ -77,6 +80,7 @@ MEDDLY::unary_operation::unary_operation(forest* arg, forest* res)
 MEDDLY::unary_operation::unary_operation(forest* arg, opnd_type res)
     : operation()
 {
+    factory = nullptr;
     parent = nullptr;
 
     argF = arg;
@@ -94,6 +98,7 @@ MEDDLY::unary_operation::~unary_operation()
 {
     unregisterInForest(argF);
     unregisterInForest(resF);
+    if (factory) factory->remove(this);
     if (parent) parent->remove(this);
 }
 
@@ -159,6 +164,94 @@ void MEDDLY::unary_operation::compute(int L, unsigned in,
         const edge_value &av, node_handle ap, oper_item &res)
 {
     throw error(error::TYPE_MISMATCH, __FILE__, __LINE__);
+}
+
+
+// ******************************************************************
+// *                     unary_factory  methods                     *
+// ******************************************************************
+
+void MEDDLY::unary_factory::cleanup()
+{
+    _cleanup();
+}
+
+MEDDLY::unary_operation*
+MEDDLY::unary_factory::build(forest* arg, forest* res)
+{
+    return nullptr;
+}
+
+MEDDLY::unary_operation*
+MEDDLY::unary_factory::build(forest* arg, opnd_type res)
+{
+    return nullptr;
+}
+
+void MEDDLY::unary_factory::_setup(const char* name, const char* doc)
+{
+    _name = name;
+    _doc = doc;
+    front = nullptr;
+}
+
+void MEDDLY::unary_factory::_cleanup()
+{
+    MEDDLY_DCASSERT(nullptr == front);
+}
+
+MEDDLY::unary_operation*
+MEDDLY::unary_factory::mtfUnary(const forest* argF, const forest* resF)
+{
+    unary_operation* prev = front;
+    unary_operation* curr = front->next;
+    while (curr) {
+        if ((curr->argF == argF) && (curr->resF == resF)) {
+            // Move to front
+            prev->next = curr->next;
+            curr->next = front;
+            front = curr;
+            return curr;
+        }
+        prev = curr;
+        curr = curr->next;
+    }
+    return nullptr;
+}
+
+MEDDLY::unary_operation*
+MEDDLY::unary_factory::mtfUnary(const forest* argF, opnd_type resType)
+{
+    unary_operation* prev = front;
+    unary_operation* curr = front->next;
+    while (curr) {
+        if ((curr->argF == argF) && (curr->resultType == resType)) {
+            // Move to front
+            prev->next = curr->next;
+            curr->next = front;
+            front = curr;
+            return curr;
+        }
+        prev = curr;
+        curr = curr->next;
+    }
+    return nullptr;
+}
+
+
+void MEDDLY::unary_factory::searchRemove(unary_operation* uop)
+{
+    if (!front) return;
+    unary_operation* prev = front;
+    unary_operation* curr = front->next;
+    while (curr) {
+        if (curr == uop) {
+            prev->next = curr->next;
+            return;
+        }
+        prev = curr;
+        curr = curr->next;
+    }
 }
 
 
